[package]
name = "chip8"
description = "A CHIP-8 emulator written in Rust"
version = "1.0.0"
license = "MIT"
authors = ["wickus.martin <wickus.martin@gmail.com>"]
keywords = ["chip8"]

[[bin]]
name = "chip8"
path = "src/main.rs"

[dependencies]
sdl2 = "0.8.0"
rand = "0.3.8"
getopts = "0.2.10"
time = "0.1.25"
