[package]
name = "chip8"
description = "A CHIP-8 emulator written in Rust"
version = "1.0.2"
license = "MIT"
keywords = ["chip8"]

[[bin]]
name = "chip8"
path = "src/main.rs"

[dependencies]
sdl2 = "0.36.0"
rand = "0.3.11"
time = "0.1.32"
serde = "1.0" # Adding serde
serde_derive = "1.0" # For deriving Serialize and Deserialize traits
